--- a/views/skills/new.ejs
+++ b/views/skills/new.ejs
@@ -9,7 +9,7 @@
 <body>
     <h1>Create New Skill</h1>
     <a href="/skills">Cancel</a>
-    <form action="/skill" method="POST" autocomplete="off">
+    <form action="/skills" method="POST" autocomplete="off">
         <input type="text" name="text">
         <input type="submit" value="Add Skill">
     </form>
